# rauc-web-ui

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
meta-nodejs-native-bin/: LICENSE  README.md
meta-nodejs-native-bin/conf/: layer.conf
meta-nodejs-native-bin/recipes-devtools/nodejs/: nodejs-native_22.13.1.bb
meta-rauc-web-ui/: README.md
meta-rauc-web-ui/conf/: layer.conf
meta-rauc-web-ui/recipes-support/rauc-web-ui/: rauc-web-ui_0.1.0.bb
meta-rauc-web-ui/recipes-support/rauc-web-ui/files/: config.env  rauc-web-ui.service
src/: main.rs  rauc.rs
ui/: package.json  pnpm-lock.yaml  svelte.config.js
ui/src/lib/: api.ts
ui/src/lib/components/: BundleInfo.svelte  BundleUpload.svelte  InstallProgress.svelte  SystemStatus.svelte  index.ts
ui/src/lib/types/: rauc.ts
ui/src/routes/: +page.svelte  layout.css
